[package]
name = "near-token"
version = "0.2.0"
edition = "2021"
authors = ["Serhieiev Ivan <serhieievivan6@gmail.com>", "Vlad Frolov <frolvlad@gmail.com>"]
repository = "https://github.com/near/near-token"
rust-version = "1.68.2"
categories = ["parser-implementations", "value-formatting", "no-std"]
license = "MIT OR Apache-2.0"
description = "a small crate to work with NEAR token values ergonomically and efficiently (NEAR Protocol)"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
borsh = { version = "1", features = ["derive"], optional = true }
schemars = { version = "0.8.8", optional = true }
interactive-clap = { version = "0.2.4", optional = true }

[dev-dependencies]
serde_json = { version = "1" }

[features]
abi = ["borsh/unstable__schema", "schemars"]
